--- a/SOURCE/app/src/main/res/layout/detail_contract.xml
+++ b/SOURCE/app/src/main/res/layout/detail_contract.xml
@@ -49,7 +49,7 @@
                     android:layout_width="wrap_content"
                     />
                 <TextView
-                    android:id="@+id/txt_contract_name"
+                    android:id="@+id/txt_agency"
                     android:textStyle="bold"
                     android:textColor="@color/colorBlack"
                     android:textSize="18sp"
@@ -116,7 +116,7 @@
                     />
                 <TextView
                     android:textStyle="bold"
-                    android:id="@+id/txt_"
+                    android:id="@+id/txt_last_count"
                     android:textColor="@color/colorBlack"
                     android:textSize="15sp"
                     android:text="32"
